Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-62516

FlushAccounting::StatisticsUpdate::update incorrect assumption about collection modify

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Morpheus
    • 7.6.0, 7.2.0, 7.2.1, 7.2.4, 7.2.2, 7.2.3, 7.2.5, 7.6.2, 7.2.6, 7.6.1, 7.6.4
    • couchbase-bucket
    • None
    • Untriaged
    • 0
    • Unknown

    Description

      Spotted this code which is now incorrect, the comment certainly is incorrect.

      void FlushAccounting::StatisticsUpdate::update(ssize_t diskSizeDelta) {
          // System events don't get updated so just set flushedItem to true
          flushedItem = true;
       
          updateDiskSize(diskSizeDelta);
      }
      

      Since adding ModifyCollection (first added for CDC support) this is untrue, modify generates a new event and each modify updates that event. TTL modifcation was added in 7.6 and again can update system events.

      The flushedItem thing there relates to avoiding the triggering of compaction if an empty collection is dropped, so needs some checking over and fixing. Flush work will also affect this.

      For now aiming for morpheus unless some real badness is detected

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jwalker Jim Walker
            jwalker Jim Walker
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty